stoat/src/snapshots/tui/stoat__test_harness__rebase_reorder.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: J
focused: #1 of 1
mode: rebase
size: 90x12
---
[0m[32mpick  [0m [0m[36mc3[0m [0m[97mc3: tip[0m
[0m[7m[30m[107mpick   c2 c2: middle                                                                      [0m







[0m[90mj/k move  K/J reorder  p/s/f/d set op  Enter run  q abort[0m
[0m[90m2 entries, onto c1[0m
[0m[1m[30m[41m REB [0m[1m[97m[100m repo [0m[97m[100mrebase                                                                         [0m
