stoat/src/snapshots/tui/stoat__test_harness__rebase_reword_mode.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: enter
focused: #1 of 1
mode: reword
size: 90x12
---
[0m[36m┌────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[1m[35mreword commit-[0m                                                                          [0m[36m│[0m
[0m[36m│[0m[90mEnter confirm   Escape abort   Backspace delete[0m                                         [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m[90moriginal: c2: middle[0m                                                                    [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m[97mc2: middle[0m[30m[107m [0m                                                                             [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m└────────────────────────────────────────────────────────────────────────────────────────┘[0m
