stoat/src/snapshots/tui/stoat__test_harness__rebase_set_ops.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: d
focused: #1 of 1
mode: rebase
size: 90x12
---
[0m[36m┌────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33msquash[0m [0m[36mc2[0m [0m[97mc2: middle[0m                                                                    [0m[36m│[0m
[0m[36m│[0m[7m[30m[107mdrop   c3 c3: tip                                                                       [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                                        [0m[36m│[0m
[0m[36m│[0m[90mj/k move  K/J reorder  p/s/f/d set op  Enter run  q abort[0m                               [0m[36m│[0m
[0m[36m│[0m[90m2 entries, onto c1[0m                                                                      [0m[36m│[0m
[0m[36m└────────────────────────────────────────────────────────────────────────────────────────┘[0m
