stoat/src/snapshots/tui/stoat__test_harness__review_move_consolidation.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: review
size: 100x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33mconsolidate.rs --- 1/1 --- rust[0m                 [0m[90m│[0m                                                 [0m[36m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   1 [0m[36mfn [0m[31mfirst[0m[36m() {[0m                              [0m[90m│[0m[1m[36m│[0m[90m   1 [0m[36mfn [0m[32mshared[0m[36m() {[0m                              [0m[36m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   2 [0m[36m    let [0m[3m[36mtemp[0m[36m = [0m[3m[36mheavy_computation[0m[36m([0m[3m[36ma[0m[36m, [0m[3m[36mb[0m[36m, [0m[3m[36mc[0m[36m);[0m[90m│[0m[1m[36m│[0m[90m   2 [0m[36m    let [0m[3m[36mtemp[0m[36m = [0m[3m[36mheavy_computation[0m[36m([0m[3m[36ma[0m[36m, [0m[3m[36mb[0m[36m, [0m[3m[36mc[0m[36m);[0m [0m[36m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   3 [0m[36m    [0m[3m[36msave[0m[36m([0m[3m[36mtemp[0m[36m);[0m                          [0m[33m┌ [0m[1m[33mr[0m[33meview ───[0m[3m[33m────[0m[33m─[0m[3m[33m────[0m[33m──────────────────────────────┐[0m
[0m[36m│[0m[1m[36m│[0m[90m   4 [0m[36m}[0m                                        [0m[33m│[0m[36m [0m[1m[36m [0m[36m?[0m[97m   open the help modal[0m                         [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   5 [0m                                         [0m[33m│[0m[36mE[0m[1m[36ms[0m[36mc[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mq[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mn[0m[97m   advance to the next review chunk[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   6 [0m[36mfn second() {[0m                            [0m[33m│[0m[36m [0m[1m[36m [0m[36mp[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   7 [0m[36m    let [0m[3m[36mtemp[0m[36m = [0m[3m[36mheavy_computation[0m[36m([0m[3m[36ma[0m[36m, [0m[3m[36mb[0m[36m, [0m[3m[36mc[0m[36m)[0m[33m│[0m[36m [0m[1m[36m [0m[36mj[0m[97m   advance to the next review chunk[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   8 [0m[36m    [0m[3m[36msave[0m[36m([0m[3m[36mtemp[0m[36m);[0m                          [0m[33m│[0m[36m [0m[1m[36m [0m[36mk[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m   9 [0m[36m}[0m                                        [0m[33m│[0m[36m [0m[1m[36m [0m[36ms[0m[97m   mark the current chunk as staged[0m            [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mu[0m[97m   mark the current chunk as unstaged[0m          [0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36mS[0m[1m[36mp[0m[36mc[0m[97m   toggle staged/unstaged for the current chunk[0m[33m│[0m
[0m[36m│[0m[1m[36m│[0m[90m.....[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mS[0m[97m   skip the current chunk[0m                      [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  A[0m[97m   apply staged chunks[0m                         [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  D[0m[97m   remove staged hunks from the reviewed commit[0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  C[0m[97m   resume the paused rebase[0m                    [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  r[0m[97m   rescan the review source[0m                    [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  :[0m[97m   open the command palette[0m                    [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[90m──────────────────────────────────────────────────[0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[97m1/1 · 0 staged · 0 unstaged · 1 pending[0m           [0m[33m│[0m
[0m[36m└───────────────────────────────────────────────[0m[33m└──────────────────────────────────────────────────┘[0m
