stoat/src/snapshots/tui/stoat__test_harness__review_move_consolidation_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: normal
size: 100x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33mconsolidate.rs --- 1/1 --- rust[0m                 [0m[90m│[0m                                                 [0m[36m│[0m
[0m[36m│[0m[90m   1 [0m[36mfn [0m[31mfirst[0m[36m() {[0m                               [0m[90m│   1 [0m[36mfn [0m[32mshared[0m[36m() {[0m                               [0m[36m│[0m
[0m[36m│[0m[90m   2 [0m[36m    let [0m[3m[36mtemp[0m[36m = [0m[3m[36mheavy_computation[0m[36m([0m[3m[36ma[0m[36m, [0m[3m[36mb[0m[36m, [0m[3m[36mc[0m[36m);[0m [0m[90m│   2 [0m[36m    let [0m[3m[36mtemp[0m[36m = [0m[3m[36mheavy_computation[0m[36m([0m[3m[36ma[0m[36m, [0m[3m[36mb[0m[36m, [0m[3m[36mc[0m[36m);[0m  [0m[36m│[0m
[0m[36m│[0m[90m   3 [0m[36m    [0m[3m[36msave[0m[36m([0m[3m[36mtemp[0m[36m);[0m                            [0m[90m│   3 [0m[36m    [0m[3m[36msave[0m[36m([0m[3m[36mtemp[0m[36m);[0m                             [0m[36m│[0m
[0m[36m│[0m[90m   4 [0m[36m}[0m                                          [0m[90m│   4 [0m[36m}[0m                                           [0m[36m│[0m
[0m[36m│[0m[90m   5 [0m                                           [0m[90m│   5 [0m                                            [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│   6 [0m[36mfn [0m[32mfirst[0m[36m() {[0m                                [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│   7 [0m[36m    [0m[32mshared()[0m[36m;[0m                               [0m[36m│[0m
[0m[36m│[0m[90m   6 [0m[36mfn second() {[0m                              [0m[90m│   8 [0m[36m}[0m                                           [0m[36m│[0m
[0m[36m│[0m[90m   7 [0m[36m    let [0m[3m[36mtemp[0m[36m = [0m[3m[36mheavy_computation[0m[36m([0m[3m[36ma[0m[36m, [0m[3m[36mb[0m[36m, [0m[3m[36mc[0m[36m);[0m [0m[90m│.....[0m                                            [0m[36m│[0m
[0m[36m│[0m[90m   8 [0m[36m    [0m[3m[36msave[0m[36m([0m[3m[36mtemp[0m[36m);[0m                            [0m[90m│.....[0m                                            [0m[36m│[0m
[0m[36m│[0m[90m   9 [0m[36m}[0m                                          [0m[90m│   9 [0m                                            [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│  10 [0m[36mfn second() {[0m                               [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│  11 [0m[36m    [0m[32mshared()[0m[36m;[0m                               [0m[36m│[0m
[0m[36m│[0m[90m.....[0m                                           [0m[90m│  12 [0m[36m}[0m                                           [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m│[0m                                                                                                  [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
