stoat/src/snapshots/tui/stoat__test_harness__review_move_cross_indent.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: review
size: 100x20
---
[0m[33mnest.rs --- 1/1 --- rust[0m                        [0m[33m┌ review ──────────────────────────────────────────┐[0m
[0m[1m[36m│[0m[90m.....[0m                                          [0m[33m│[0m[36m [0m[1m[36m [0m[36m?[0m[97m   open the help modal[0m                         [0m[33m│[0m
[0m[1m[36m│[0m[90m   1 [0m[97mfn outer() {[0m                              [0m[33m│[0m[36mE[0m[1m[36ms[0m[36mc[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[1m[36m│[0m[90m   2 [0m[97m    let [0m[3m[36mrelocated[0m[97m = [0m[3m[36mcompute[0m[97m([0m[3m[36marg1[0m[97m, [0m[3m[36marg2[0m[97m, [0m[3m[36mar[0m[3m[33m│[0m[36m [0m[1m[36m [0m[36mq[0m[97m   close the active review[0m                     [0m[33m│[0m
[0m[1m[36m│[0m[90m   3 [0m[97m}[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mn[0m[97m   advance to the next review chunk[0m            [0m[33m│[0m
[0m[1m[36m│[0m[90m   4 [0m                                          [0m[33m│[0m[36m [0m[1m[36m [0m[36mp[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[1m[36m│[0m[90m.....[0m                                          [0m[33m│[0m[36m [0m[1m[36m [0m[36mj[0m[97m   advance t[0m[3m[97mo the nex[0m[97mt r[0m[3m[97meview c[0m[97mh[0m[3m[97munk[0m[3m[36m1[0m[97m, [0m[3m[36marg2[0m[97m, [0m[3m[36marg[0m[3m[33m│[0m
[0m[1m[36m│[0m[90m   5 [0m[97mfn wrapper() {[0m                            [0m[33m│[0m[36m [0m[1m[36m [0m[36mk[0m[97m   step back to the previous review chunk[0m      [0m[33m│[0m
[0m[1m[36m│[0m[90m   6 [0m[97m    println!("hello");[0m                    [0m[33m│[0m[36m [0m[1m[36m [0m[36ms[0m[97m   mark the current chunk as staged[0m            [0m[33m│[0m
[0m[1m[36m│[0m[90m   7 [0m[97m}[0m                                         [0m[33m│[0m[36m [0m[1m[36m [0m[36mu[0m[97m   mark the current chunk as unstaged[0m          [0m[33m│[0m
                                                [0m[33m│[0m[36mSpc[0m[97m   toggle staged/unstaged for the current chunk[0m[33m│[0m
                                                [0m[33m│[0m[36m  S[0m[97m   skip the current chunk[0m                      [0m[33m│[0m
                                                [0m[33m│[0m[36m  A[0m[97m   apply staged chunks[0m                         [0m[33m│[0m
                                                [0m[33m│[0m[36m  D[0m[97m   remove staged hunks from the reviewed commit[0m[33m│[0m
                                                [0m[33m│[0m[36m  C[0m[97m   resume the paused rebase[0m                    [0m[33m│[0m
                                                [0m[33m│[0m[36m  r[0m[97m   rescan the review source[0m                    [0m[33m│[0m
                                                [0m[33m│[0m[36m  :[0m[97m   open the command palette[0m                    [0m[33m│[0m
                                                [0m[33m│[0m[90m──────────────────────────────────────────────────[0m[33m│[0m
                                                [0m[33m│[0m[97m1/1 · 0 staged · 0 unstaged · 1 pending[0m           [0m[33m│[0m
[0m[1m[30m[46m REV [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                       [0m[33m[100m└──────────────────────────────────────────────────┘[0m
